tutorial/canary/virtual-service-recommendation-90-10.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
  namespace: tutorial
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v1
      weight: 90
    - destination:
        host: recommendation
        subset: version-v2
      weight: 10
# Nota: cambiar weight de forma progresiva: 10, 20, 30, 40 asi hasta llegar a 100
